--- a/Page9.html
+++ b/Page9.html
@@ -1,186 +1,214 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Page 9</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background: #000;
-      color: white;
-      text-align: center;
-      overflow: hidden;
-      font-family: Arial, sans-serif;
-    }
+<meta charset="UTF-8">
+<title>Page 9</title>
+<style>
+  body {
+    margin: 0;
+    padding: 0;
+    background: black;
+    overflow: hidden;
+    font-family: Arial, sans-serif;
+    color: white;
+    text-align: center;
+  }
 
-    h1, h2, h3 {
-      margin: 10px 0;
-      font-weight: bold;
-    }
+  .top-text {
+    position: absolute;
+    top: 20px;
+    width: 100%;
+    font-size: 28px;
+    font-weight: bold;
+    text-shadow: 2px 2px 8px #000;
+    line-height: 1.6;
+    z-index: 10;
+  }
 
-    /* Slideshow container */
-    .slideshow {
-      position: relative;
-      width: 1080px;
-      height: 600px;
-      margin: 20px auto;
-      perspective: 1000px;
-    }
+  .slideshow {
+    position: relative;
+    width: 1080px;
+    max-width: 90vw;
+    height: auto;
+    margin: 100px auto 0 auto;
+    z-index: 5;
+  }
 
-    .slideshow img {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: auto;
-      opacity: 0;
-      transform: scale(0.8) rotateY(90deg);
-      transition: all 1s ease-in-out;
-    }
+  .slideshow img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    border-radius: 20px;
+    opacity: 0;
+    transform: scale(0.9) rotateY(0deg);
+    transition: opacity 1s ease, transform 2s ease;
+  }
 
-    .slideshow img.active {
-      opacity: 1;
-      transform: scale(1) rotateY(0deg);
-      z-index: 1;
-    }
+  .slideshow img.active {
+    opacity: 1;
+    transform: scale(1) rotateY(360deg);
+    z-index: 2;
+  }
 
-    /* Quiz box */
-    #quiz {
-      display: none;
-      margin-top: 20px;
-    }
+  .quiz-box {
+    position: absolute;
+    bottom: 60px;
+    width: 100%;
+    display: none;
+    z-index: 20;
+  }
 
-    input, button {
-      padding: 10px;
-      font-size: 16px;
-      margin: 5px;
-    }
+  .quiz-box input {
+    font-size: 20px;
+    padding: 6px 12px;
+    border-radius: 8px;
+    border: none;
+    outline: none;
+    text-align: center;
+    width: 300px;
+  }
 
-    /* Floating emojis */
-    .emoji {
-      position: absolute;
-      font-size: 2rem;
-      animation: floatUp 6s linear infinite;
-    }
+  .quiz-box button {
+    font-size: 18px;
+    padding: 6px 14px;
+    margin-left: 8px;
+    border: none;
+    border-radius: 8px;
+    background: deeppink;
+    color: white;
+    cursor: pointer;
+    font-weight: bold;
+  }
 
-    @keyframes floatUp {
-      from { transform: translateY(100vh) scale(1); opacity: 1; }
-      to { transform: translateY(-10vh) scale(1.5); opacity: 0; }
-    }
+  .float {
+    position: absolute;
+    font-size: 28px;
+    animation: floatUp 10s linear infinite;
+    pointer-events: none;
+  }
 
-    /* Fireworks / Confetti */
-    .firework {
-      position: absolute;
-      width: 5px;
-      height: 5px;
-      border-radius: 50%;
-      animation: explode 1s ease-out forwards;
-    }
-
-    @keyframes explode {
-      from { transform: scale(1); opacity: 1; }
-      to { transform: scale(5); opacity: 0; }
-    }
-  </style>
+  @keyframes floatUp {
+    from { transform: translateY(100vh) rotate(0deg); opacity: 1; }
+    to { transform: translateY(-120vh) rotate(360deg); opacity: 0; }
+  }
+</style>
 </head>
 <body>
 
-  <h1>Happy Birthday My Favourite Panda 🐼</h1>
-  <h2>Ennoda Kolanthaaa Panda 😚🫶</h2>
-  <h3>En panda eppovum Happy ya erukanum🤗</h3>
+<!-- Music -->
+<audio id="bg-music" loop autoplay>
+  <source src="Page9.mp3" type="audio/mpeg">
+</audio>
+<button id="playBtn" style="
+  position: fixed; bottom: 20px; right: 20px;
+  padding: 12px 18px; background: hotpink; border: none;
+  border-radius: 8px; font-weight: bold; color: white; cursor: pointer; z-index: 9999;
+">▶ Play Music</button>
 
-  <!-- Slideshow -->
-  <div class="slideshow">
-    <img src="P1.jpg" class="active">
-    <img src="P2.jpg">
-    <img src="P3.jpg">
-    <img src="P4.jpg">
-    <img src="P5.jpg">
-    <img src="P6.jpg">
-    <img src="P7.jpg">
-    <img src="P8.jpg">
-    <img src="P9.jpg">
-    <img src="P10.jpg">
-    <img src="P11.jpg">
-    <img src="P12.jpg">
-    <img src="P13.jpg">
-    <img src="P14.jpg">
-    <img src="P15.jpg">
-  </div>
+<!-- Top Text -->
+<div class="top-text">
+  Happy Birthday My Favourite Panda 🐼 <br>
+  Ennoda Kolanthaaa Panda 😚🫶 <br>
+  En panda eppovum Happy ya erukanum
+</div>
 
-  <!-- Quiz -->
-  <div id="quiz">
-    <p><b>Unnaku pudcha colour heart more than 10 type pannu next pola...</b></p>
-    <input type="text" id="answer" placeholder="Type here...">
-    <button onclick="checkAnswer()">Submit</button>
-  </div>
+<!-- Slideshow -->
+<div class="slideshow" id="slideshow">
+  <img src="P1.jpg" class="active">
+  <img src="P2.jpg">
+  <img src="P3.jpg">
+  <img src="P4.jpg">
+  <img src="P5.jpg">
+  <img src="P6.jpg">
+  <img src="P7.jpg">
+  <img src="P8.jpg">
+  <img src="P9.jpg">
+  <img src="P10.jpg">
+  <img src="P11.jpg">
+  <img src="P12.jpg">
+  <img src="P13.jpg">
+  <img src="P14.jpg">
+  <img src="P15.jpg">
+</div>
 
-  <!-- Background music -->
-  <audio autoplay loop>
-    <source src="Page9.mp3" type="audio/mpeg">
-  </audio>
+<!-- Quiz -->
+<div class="quiz-box" id="quiz-box">
+  <input type="text" id="answer" placeholder="Type hearts ❤️💙💚💜 ...">
+  <button onclick="checkAnswer()">Submit</button>
+</div>
 
-  <script>
-    // Slideshow logic
-    const slides = document.querySelectorAll(".slideshow img");
-    let index = 0;
-    function showSlides() {
-      slides.forEach((img, i) => img.classList.remove("active"));
-      slides[index].classList.add("active");
-      index++;
-      if (index < slides.length) {
-        setTimeout(showSlides, 3000); // 3 seconds each
-      } else {
-        document.getElementById("quiz").style.display = "block"; // Show quiz after slideshow ends
-      }
+<script>
+  // Background Music autoplay fix
+  const music = document.getElementById("bg-music");
+  const playBtn = document.getElementById("playBtn");
+  window.addEventListener("load", () => {
+    music.play().then(() => {
+      playBtn.style.display = "none";
+    }).catch(() => {
+      playBtn.style.display = "block";
+    });
+  });
+  playBtn.addEventListener("click", () => {
+    music.play();
+    playBtn.style.display = "none";
+  });
+
+  // Slideshow logic
+  const slides = document.querySelectorAll(".slideshow img");
+  let index = 0;
+  function showNext() {
+    slides[index].classList.remove("active");
+    index++;
+    if (index >= slides.length) {
+      document.getElementById("quiz-box").style.display = "block"; // Show quiz
+      return;
     }
-    showSlides();
+    slides[index].classList.add("active");
+    setTimeout(showNext, 3000); // 3s per photo
+  }
+  setTimeout(showNext, 3000);
 
-    // Floating emojis
-    const emojis = ["🐼","🫶","😚","❤️‍🩹","🙈","😊","🥰"];
-    function createEmoji() {
-      const emoji = document.createElement("div");
-      emoji.className = "emoji";
-      emoji.innerText = emojis[Math.floor(Math.random() * emojis.length)];
-      emoji.style.left = Math.random() * window.innerWidth + "px";
-      emoji.style.top = "100vh";
-      emoji.style.fontSize = Math.random() * 30 + 20 + "px";
-      document.body.appendChild(emoji);
-      setTimeout(() => emoji.remove(), 6000);
-    }
-    setInterval(createEmoji, 500);
+  // Floating emojis
+  const emojis = ["🐼","🫶","😚","❤️‍🩹","🙈","😊","🥰"];
+  function createEmoji() {
+    const span = document.createElement("span");
+    span.className = "float";
+    span.innerText = emojis[Math.floor(Math.random()*emojis.length)];
+    span.style.left = Math.random()*90 + "vw";
+    span.style.fontSize = (24 + Math.random()*20) + "px";
+    span.style.animationDuration = (6 + Math.random()*5) + "s";
+    document.body.appendChild(span);
+    setTimeout(() => span.remove(), 12000);
+  }
+  setInterval(createEmoji, 500);
 
-    // Fireworks
-    function launchFireworks() {
-      for (let i = 0; i < 30; i++) {
-        const fw = document.createElement("div");
-        fw.className = "firework";
-        fw.style.left = Math.random() * window.innerWidth + "px";
-        fw.style.top = Math.random() * window.innerHeight + "px";
-        fw.style.background = `hsl(${Math.random() * 360}, 100%, 50%)`;
-        document.body.appendChild(fw);
-        setTimeout(() => fw.remove(), 1000);
-      }
+  // Confetti & Fireworks
+  function blastEffects() {
+    for (let i=0; i<40; i++) {
+      let conf = document.createElement("span");
+      conf.innerText = ["🎆","🎇","🎊"][Math.floor(Math.random()*3)];
+      conf.className = "float";
+      conf.style.left = Math.random()*90 + "vw";
+      conf.style.fontSize = (20+Math.random()*25)+"px";
+      conf.style.animationDuration = (3+Math.random()*5)+"s";
+      document.body.appendChild(conf);
+      setTimeout(()=>conf.remove(),8000);
     }
+  }
+  blastEffects();
 
-    // Quiz check
-    function checkAnswer() {
-      const ans = document.getElementById("answer").value;
-      const hearts = ["❤️","💙","💚","💜","🧡","💛","🤍","🤎","🩵","🩷","🖤"];
-      let count = 0;
-      for (let h of hearts) {
-        const regex = new RegExp(h,"g");
-        const matches = ans.match(regex);
-        if (matches) count += matches.length;
-      }
-      if (count >= 10) {
-        launchFireworks();
-        setTimeout(() => { window.location.href = "page10.html"; }, 2000);
-      } else {
-        alert("Try again! Type at least 10 hearts ❤️💙💚💜");
-      }
+  // Quiz check
+  function checkAnswer() {
+    let ans = document.getElementById("answer").value.trim();
+    let heartCount = (ans.match(/❤️|💙|💚|💜|🖤|💛|🩷|🩵/g) || []).length;
+    if (heartCount >= 10) {
+      window.location.href = "page10.html";
+    } else {
+      alert("Type MORE than 10 hearts to continue ❤️💙💚💜...");
     }
-  </script>
+  }
+</script>
+
 </body>
 </html>
